--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link rel="stylesheet" href="compiled/styles.css">
+    <link rel="stylesheet" href="/compiled/styles.css">
     <title>Categorizer</title>
 </head>
 <body>
