Add "Create Profile" button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
     <div id="top-bar">
         <img class="logo" src="resources/logo-white.png"></img>
         <input type="text" placeholder=" Search for an interest.. (reading, hiking, LGBTQ, liberal, conservative, geocaching, etc)" class="search-bar">
+        <button><span>Create Profile!</span></button>
     </div>
     <div class="grid-container">
         <div class="grid">
