--- a/views/styles.less
+++ b/views/styles.less
@@ -12,6 +12,16 @@
         width: 700px;
         height: 39px;
     }
+    button {
+        height: 50px;
+        width: 100px;
+        vertical-align: top;
+        margin-top: 13px;
+        margin-left: 16px;
+        font-size: 15px;
+        background-color: cyan;
+        font-family: monospace;
+    }
 }
 
 html {
