Move Create Account button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,11 @@
 </head>
 <body>
     <div id="top-bar">
-        <img class="logo" src="resources/logo-white.png"></img>
-        <input type="text" placeholder=" Search for an interest.. (reading, hiking, LGBTQ, liberal, conservative, geocaching, etc)" class="search-bar">
         <button><span>Create Profile!</span></button>
+        <img class="logo" src="resources/logo-white.png"></img>
+        <div class="search-container">
+            <input type="text" placeholder=" Search for an interest.. (reading, hiking, LGBTQ, liberal, conservative, geocaching, etc)" class="search-bar">
+        </div>
     </div>
     <div class="grid-container">
         <div class="grid">
