Move create account button to top right of page

--- a/views/styles.less
+++ b/views/styles.less
@@ -16,7 +16,8 @@
         height: 50px;
         width: 100px;
         margin-left: -100px;
-        margin-top: 13px;
+        margin-top: 5px;
+        margin-right: 5px;
         float: right;
         vertical-align: top;
         font-size: 15px;
